# structuring-code-examples

./: README.md  example.py  mocks.py  packages.py  pyproject.toml
solution/: 0_functions.py  external_packages.py
solution/0_functions/: api.py  endpoint.py  functions.py  test_add_shipping.py  tests.py
solution/1_classes_static/: command.py  dhl_client.py  endpoint.py  order_service.py  order_store.py  s3_client.py  test_order_service.py
solution/2_classes/: api.py  command.py  dhl_client.py  endpoint.py  mocks.py  order_service.py  order_store.py  s3_client.py  test_order_service.py  tests.py
solution/3_di/: api.py  command.py  dhl_client.py  endpoint.py  mocks.py  order_service.py  order_store.py  packages.py  s3_client.py  test_order_service.py
solution/4_di_no_classes/: api.py  command.py  dhl_client.py  endpoint.py  mocks.py  order_service.py  order_store.py  packages.py  s3_client.py  test_order_service.py  tests.py
solution/5_base_classes/: command.py  dhl_client.py  order_service.py  order_store.py  packages.py  s3_client.py
