[project]
name = "structuring_code_examples"
version = "0.0.1"
authors = [
  { name="Tomi Tuhkanen", email="tomi.tuhkanen@iki.fi" },
]
description = "Examples of how to structure code"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "flake8-pyproject",
    "pylint",
    "pytest"
]

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.flake8]
exclude = ".venv, .git, .eggs, __pycache__, build, dist"
max-line-length = 120
ignore = "E402,F401,F403"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "import-error",
    "missing-docstring",
    "invalid-name",
    "no-name-in-module",
    "too-few-public-methods",
    "useless-object-inheritance",
    "duplicate-code",
    "wildcard-import",
    "unused-wildcard-import"
]
